[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Enemies/MossMage.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=2]
radius = 2.3
mid_height = 4.9
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.380392, 0.313726, 0.490196, 1 )
metallic = 0.02
metallic_specular = 0.65
roughness = 0.75

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 1, 2 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.196078, 0.113725, 0.329412, 1 )
metallic = 0.02
metallic_specular = 0.65
roughness = 0.75

[sub_resource type="CapsuleShape" id=3]
radius = 2.23286
height = 4.973

[sub_resource type="CapsuleShape" id=7]
radius = 2.41403
height = 4.58711

[sub_resource type="SphereShape" id=8]
radius = 8.0

[sub_resource type="SphereShape" id=9]
radius = 15.0

[sub_resource type="SphereShape" id=10]
radius = 20.0

[node name="MossMage" type="KinematicBody"]
collision_layer = 128
collision_mask = 67
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 8.47033e-22, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
layers = 128
mesh = SubResource( 2 )
material/0 = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="EyeMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 1.86265e-09, 0, 1, 0, -1.86265e-09, 0, 1, 0.00243522, 1.97834, -1.47492 )
layers = 128
mesh = SubResource( 4 )
material/0 = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="RayCast" type="RayCast" parent="EyeMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.73115e-08, 0, -0.983202 )
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 2
debug_shape_thickness = 3

[node name="Eyes" type="Spatial" parent="."]

[node name="StunTimer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37115e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="HurtArea" type="Area" parent="."]
collision_layer = 128
collision_mask = 66

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
transform = Transform( 0.00191982, -0.999998, 0, -4.37113e-08, -8.3918e-11, 1, -0.999998, -0.00191982, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )

[node name="FleeArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
collision_layer = 128
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="FleeArea"]
shape = SubResource( 8 )

[node name="AlertArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
collision_layer = 128
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AlertArea"]
shape = SubResource( 9 )

[node name="ChaseArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
collision_layer = 128
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="ChaseArea"]
shape = SubResource( 10 )

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="HurtArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="FleeArea" to="." method="_on_FleeArea_body_entered"]
[connection signal="body_exited" from="FleeArea" to="." method="_on_FleeArea_body_exited"]
[connection signal="body_entered" from="AlertArea" to="." method="_on_AlertArea_body_entered"]
[connection signal="body_exited" from="AlertArea" to="." method="_on_AlertArea_body_exited"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_ChaseArea_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_ChaseArea_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
